@@ -1,4 +1,5 @@
 1.9.8
+ - Add new INFO fields in compare group vcf format to show allele counts in each group.
  - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
    in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
    The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
